--- a/vic-builder/www/style.css
+++ b/vic-builder/www/style.css
@@ -4,12 +4,104 @@ body {
   color: white;
 }
 
-# Link colours
 a:link { color: white; text-decoration: underline; }
 a:visited { color: white; }
 a:hover { color: white; }
 a:active { color: white; }
 
+########################################
+# Main Menu
+########################################
+
+.footer {
+  background-color: #006622;
+}
+
+.menu {
+  position: absolute;
+  z-index: -100000000;
+  width: 100%;
+  height: 40;
+  bottom: 0px;
+  background-color: #009231;
+}
+
+########################################
+# About page
+########################################
+
 .attribution {
   width: 500px;
+}
+
+IMG.spreadsheet {
+  width: 300px;
+  height: 200px;
+}
+
+########################################
+# A streetview box
+########################################
+
+.entry_dropbox {
+  width: 400;
+  height: 300;
+  background-image: url("images/6x4_drop_shadow.png");
+  background-size: 100%;
+}
+
+.entry {
+  position: relative;
+  width: 350;
+  height: 245;
+  background-color: #106735;
+}
+
+.entry_description_ribbon {
+  position: absolute;
+  background-color: black;
+  opacity: 0.4;
+  filter: alpha(opacity=40);
+  width: 100%;
+  height: 50px;
+  bottom: 50px;
+}
+
+.entry_description {
+  position: absolute;
+  background-color: clear;
+  width: 100%;
+  height: 30px;
+  bottom: 55px;
+}
+
+.gold_border {
+  border: 5px solid #d0af60;
+}
+
+.red_border {
+  border: 5px solid #ee0000;
+}
+
+.white_border {
+  border: 5px solid white;
+}
+
+.green_border {
+  border: 5px solid #009231;
+}
+
+####################
+# API page
+####################
+
+.api_endpoint {
+  font-weight: bold;
+}
+
+.api_description {
+}
+
+.api_example {
+  font-weight: lighter;
 }
