--- a/vic-builder/www/style.css
+++ b/vic-builder/www/style.css
@@ -66,11 +66,12 @@ IMG.spreadsheet {
 .entry_description_ribbon {
   position: absolute;
   background-color: black;
-  opacity: 0.4;
-  filter: alpha(opacity=40);
+  opacity: 0.6;
+  filter: alpha(opacity=60);
   width: 100%;
   height: 50px;
-  bottom: 50px;
+  bottom: 30px;
+  z-index: 10000000;
 }
 
 .entry_description {
@@ -78,7 +79,8 @@ IMG.spreadsheet {
   background-color: clear;
   width: 100%;
   height: 30px;
-  bottom: 55px;
+  bottom: 35px;
+  z-index: 10000001;
 }
 
 .gold_border {
