--- a/vic-builder/www/style.css
+++ b/vic-builder/www/style.css
@@ -27,6 +27,15 @@ a:active { color: white; }
 }
 
 ########################################
+# Page content
+########################################
+
+.content {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+########################################
 # About page
 ########################################
 
@@ -56,6 +65,7 @@ IMG.spreadsheet {
 }
 
 .entry {
+  float: left;
   margin: 30px;
   position: relative;
   width: 350;
