Vic Builder stuff

--- a/vic-builder/www/style.css
+++ b/vic-builder/www/style.css
@@ -2,11 +2,12 @@ body {
   //background-color: #49785e;
   background-color: #106735;
   color: white;
+  font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-a:link { color: white; text-decoration: underline; }
+a:link { color: white; text-decoration: none; }
 a:visited { color: white; }
-a:hover { color: white; }
+a:hover { color: #d0af60; }
 a:active { color: white; }
 
 ########################################
@@ -24,6 +25,10 @@ a:active { color: white; }
   height: 40;
   bottom: 0px;
   background-color: #009231;
+}
+
+.centered {
+	margin-left:auto;margin-right:auto
 }
 
 ########################################
@@ -86,7 +91,7 @@ IMG.screenshot {
   width: 100%;
   height: 30px;
   text-align: center;
-  bottom: 35px;
+  bottom: 45px;
   z-index: 10000001;
 }
 
